@@ -4,7 +4,9 @@ Changelog
 3.0 (unreleased)
 ----------------
 
-- Avoid storing `_aday`, `_fday` and `_pday` in memory.
+- Avoid storing `_aday`, `_fday`, `_pday`, `_amon`, `_fmon` and `_pmon` in
+  memory for every instance but look them up dynamically based on `_dayoffset`
+  and `_month`. This saves another 150 bytes of memory per DateTime instance.
 
 - Moved various internal parsing related class variables to module constants.
 
